--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "kadoppe <kadoppe@me.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "async": "^2.1.2",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.6",
